# gpx2exif

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: publish.yml
gpx2exif/: __init__.py  common.py  exiftool.py  flickr_api_auth.py  gpx2exif.py  gpx2flickr.py  main.py  time_extractor.py
prompts/: exiftool_pyet_gpxproc.txt  pr5_timezone.txt  pr6_extract_time_as_py.txt
pyinstaller_bootstrap/: main.py
scripts/: batch.ps1  batch.sh  extract_time.sh  gpx_edit.sh  gpx_import.sh
scripts_build/: publish_tag_new.sh
tests/: test_gpx2flickr.py
